--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 django = "*"
 psycopg2-binary = "*"
+djangorestframework = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "*"
